--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="btn_yes">YES</string>
     <string name="btn_no">NO</string>
 
-    <string name="dev_btn_gps">SAVE PLACE</string>
+    <string name="dev_btn_gps">SAVE</string>
     <string name="title_activity_maps">Map</string>
+
+    <string name="title_btn_distance">D</string>
 </resources>
